force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/TeachingSupplyBorrowingApplication__c.object-meta.xml
<CustomObject>
    <label>教学用品借用申请</label>
    <nameField>
        <displayFormat>TSBA-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>