force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <inlineHelpText>若借用的物品用于课堂教学，请填写上课教师的姓名。</inlineHelpText>
    <label>借用人</label>
    <length>10</length>
    <type>Text</type>
</CustomField>