force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/BorrowingEndClassTimes__c.field-meta.xml
<CustomField>
    <fullName>BorrowingEndClassTimes__c</fullName>
    <label>借用结束节次</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClassTimesGlobal</valueSetName>
    </valueSet>
</CustomField>