force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/BorrowingEndDate__c.field-meta.xml
<CustomField>
    <fullName>BorrowingEndDate__c</fullName>
    <label>借用结束日期</label>
    <type>Date</type>
</CustomField>