force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/BorrowingEndDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>BorrowingEndDateAndTime__c</fullName>
    <inlineHelpText>按日期和节次借用时，此字段将在保存后自动计算，无需填写。</inlineHelpText>
    <label>借用结束时间</label>
    <type>DateTime</type>
</CustomField>