force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/BorrowingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BorrowingStartDate__c</fullName>
    <label>借用开始日期</label>
    <type>Date</type>
</CustomField>