force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/BorrowingStartDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>BorrowingStartDateAndTime__c</fullName>
    <inlineHelpText>按日期和节次借用时，此字段将在保存后自动计算，无需填写。</inlineHelpText>
    <label>借用开始时间</label>
    <type>DateTime</type>
</CustomField>