force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ClassRoom__c.field-meta.xml
<CustomField>
    <fullName>ClassRoom__c</fullName>
    <label>教室</label>
    <length>10</length>
    <type>Text</type>
</CustomField>