force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/IsBorrowed__c.field-meta.xml
<CustomField>
    <fullName>IsBorrowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否借出</label>
    <type>Checkbox</type>
</CustomField>