force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/IsNotified__c.field-meta.xml
<CustomField>
    <fullName>IsNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已发送归还通知</label>
    <type>Checkbox</type>
</CustomField>