force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/IsReturned__c.field-meta.xml
<CustomField>
    <fullName>IsReturned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否归还</label>
    <type>Checkbox</type>
</CustomField>