force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>地点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TeachingLocationGlobal</valueSetName>
    </valueSet>
</CustomField>