force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>联系电话</label>
    <type>Phone</type>
</CustomField>