force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReceiveAddress__c.field-meta.xml
<CustomField>
    <fullName>ReceiveAddress__c</fullName>
    <inlineHelpText>领取地址会在审批通过后显示，无需填写。</inlineHelpText>
    <label>领取地址</label>
    <length>100</length>
    <type>Text</type>
</CustomField>