force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReceiveContact__c.field-meta.xml
<CustomField>
    <fullName>ReceiveContact__c</fullName>
    <inlineHelpText>领取联系人会在审批通过后显示，无需填写。</inlineHelpText>
    <label>领取联系人</label>
    <length>40</length>
    <type>Text</type>
</CustomField>