force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReceiveContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReceiveContactPhone__c</fullName>
    <inlineHelpText>领取联系方式会在审批通过后显示，无需填写。</inlineHelpText>
    <label>领取联系方式</label>
    <type>Phone</type>
</CustomField>