force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>ReturnAddress__c</fullName>
    <inlineHelpText>归还地址会在审批通过后显示，无需填写。</inlineHelpText>
    <label>归还地址</label>
    <length>100</length>
    <type>Text</type>
</CustomField>