force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReturnContact__c.field-meta.xml
<CustomField>
    <fullName>ReturnContact__c</fullName>
    <inlineHelpText>归还联系人会在审批通过后显示，无需填写。</inlineHelpText>
    <label>归还联系人</label>
    <length>40</length>
    <type>Text</type>
</CustomField>