force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/ReturnContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReturnContactPhone__c</fullName>
    <inlineHelpText>归还联系方式会在审批通过后显示，无需填写。</inlineHelpText>
    <label>归还联系方式</label>
    <type>Phone</type>
</CustomField>