force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/SecondaryCollegeText__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCollegeText__c</fullName>
    <formula>SecondaryCollegeLookup__r.Name</formula>
    <label>学院名称</label>
    <type>Text</type>
</CustomField>