force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/fields/TeachingSupply__c.field-meta.xml
<CustomField>
    <fullName>TeachingSupply__c</fullName>
    <label>物品</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>TeachingSupplyGlobal</valueSetName>
    </valueSet>
</CustomField>