force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/recordTypes/TeachingSupplyBorrowingByClassTimes.recordType-meta.xml
<RecordType>
    <fullName>TeachingSupplyBorrowingByClassTimes</fullName>
    <active>true</active>
    <description>按日期和节次选择借用时段的地点。</description>
    <label>明德楼、运动场</label>
</RecordType>