force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/recordTypes/TeachingSupplyBorrowingByDateAndTime.recordType-meta.xml
<RecordType>
    <fullName>TeachingSupplyBorrowingByDateAndTime</fullName>
    <active>true</active>
    <description>按日期和时间选择借用时段的地点。</description>
    <label>格致楼、实训楼</label>
</RecordType>