force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/validationRules/BorrowingDateAndTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BorrowingDateAndTimeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>BorrowingStartDateAndTime__c &gt; BorrowingEndDateAndTime__c</errorConditionFormula>
    <errorMessage>借用开始时间不能晚于借用结束时间。</errorMessage>
</ValidationRule>