force-app/main/default/objects/TeachingSupplyBorrowingApplication__c/validationRules/IsReturnValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>IsReturnValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				IsReturned__c = true,
				IF(
								IsBorrowed__c = true,
								false,
								true
				),
				false
)</errorConditionFormula>
    <errorMessage>不允许在“是否借出”未勾选时勾选“是否归还”。</errorMessage>
</ValidationRule>